--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <title>Order Form</title>
 </head>
 <body>
-    <img id="pic" src="https://images.unsplash.com/photo-1498837167922-ddd27525d352?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60">
+    <img id="pic" src="food.jfif">
     <form>
         <div id="request">
             <h1>Order Request</h1>
             <p>After you fill out this order request, 
                 we will contact you to go over details and availability before the order is completed.
                 If you would like faster service and direct information on pricing 
-                please contact us at Contact us at (123) 456-7890 or <a href="no_reply@example.com">no_reply@example.com</a>
+                please contact us at Contact us at +91 7088 474958 or <a href="mailto:mustafaraza751137@gmail.com">mustafaraza751137@gmail.com</a>
             </p>
         </div>
         <div class="question">
