--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>After you fill out this order request, 
                 we will contact you to go over details and availability before the order is completed.
                 If you would like faster service and direct information on pricing 
-                please contact us at Contact us at +91 7088 474958 or <a href="mailto:mustafaraza751137@gmail.com">mustafaraza751137@gmail.com</a>
+                please contact us at Contact us at <a href="tel:+917088474958">+91 7088 474958</a> or <a href="mailto:mustafaraza751137@gmail.com">mustafaraza751137@gmail.com</a>
             </p>
         </div>
         <div class="question">
