--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <input type="text" class="info" placeholder="Your answer" required><br>
         </div>
         <div class="question">
+            <label for="">Address <span>*</span></label><br>
+            <input type="text" class="info" placeholder="Your answer" required><br>
+        </div>
+        <div class="question">
             <label for="">Phone number <span>*</span></label><br>
             <input type="text" class="info" placeholder="Your answer" required><br>
         </div>
