--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Order Form</title>
 </head>
 <body>
-    <img id="pic" src="food.jfif">
+    <div id="pic">
+    </div>
     <form>
         <div id="request">
             <h1>Order Request</h1>
