--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <title>Order Form</title>
+    <title>Food Delivery</title>
 </head>
 <body>
-    <div id="pic">
-    </div>
+    <div id="pic"></div>
     <form>
         <div id="request">
             <h1>Order Request</h1>
@@ -63,7 +62,7 @@
             <input type="text" class="info" placeholder="Your answer"><br>
         </div>
         <div>
-            <input id="button" type="button" value="Place Order" onclick="myFunction()">
+            <input id="button" type="submit" value="Place Order" onclick="myFunction()">
         </div>
     </form>
 </body>
